--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <a href="https://www.linkedin.com/in/shengguang-wu-41334627b">
                 <img src="images/icons/linkedin.svg" alt="LinkedIn Icon">
               </a>
-              <a href="CV.pdf">
+              <a href="cv.pdf">
                 <img src="images/icons/curriculum-vitae.svg" alt="CV">
               </a>
             </td>
