--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                   <!-- <a href="bib/">bibtex</a> -->
                 </div>
                 <div align="justify">
-                  TL;DR: 
+                  <!-- TL;DR:  -->
                 </div>
               </td>
             </tr>
@@ -196,7 +196,7 @@
                   <!-- <a href="bib/.bib">bibtex</a> -->
                 </div>
                 <div align="justify">
-                  TL;DR: 
+                  <!-- TL;DR:  -->
                 </div>
               </td>
             </tr>
@@ -220,7 +220,7 @@
                   <!-- <a href="">code</a> -->
                 </div>
                 <div align="justify">
-                  TL;DR: 
+                  <!-- TL;DR:  -->
                 </div>
               </td>
             </tr>
@@ -245,7 +245,7 @@
                   <!-- <a href="bib/">bibtex</a> -->
                 </div>
                 <div align="justify">
-                  TL;DR: 
+                  <!-- TL;DR:  -->
                 </div>
               </td>
             </tr>  
@@ -270,7 +270,7 @@
                 </tr>
                 <tr>
                   <td width="85%">
-                    <b>Ludwig Maximilian University of Munich (LMU Munich) (2019 - 2020)</b><br>
+                    <b>Ludwig Maximilian University of Munich (LMU Munich)</b> (2019 - 2020)<br>
                     <li> Exchange: Cognitive Linguistics, Formal Analysis of Language </li>
                   </td>
                   <td width="15%">
