--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                    <i>Findings of <b>EMNLP</b></i>, 2023
                 </div>
                 <div class="tags">
-                  <!--<a href="https://arxiv.org/abs/2211.11158">arxiv</a> /-->
+                  <a href="https://arxiv.org/abs/2312.07066">arxiv</a> /
                   <!--<a href="">code</a>-->
                   <!-- <a href="bib/">bibtex</a> -->
                 </div>
@@ -216,7 +216,7 @@
                   <i>Under Review at <b>AAAI</b></i>, 2024
                 </div>
                 <div class="tags">
-                  <!-- <a href="https://arxiv.org/abs/2211.11158">arxiv</a> / -->
+                  <a href="https://arxiv.org/abs/2312.08056">arxiv</a> /
                   <!-- <a href="">code</a> -->
                 </div>
                 <div align="justify">
