--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <div class="container">
                     <!-- <img src="images/interpretability.png"> -->
                     <div class="text">
-                        <li> <span><strong>Learning to Learn (Self-Learning):</strong> <br> 
+                        <li> <span><strong>Learning to Learn:</strong> <br> 
                           &nbsp;&nbsp;&nbsp;&nbsp;
                           How do we enable an LM to improve itself through self-learning – to actively assimilate new information (data) and apply new objectives best suited to its own needs, as efficiently as an exceptional human learner.</span><br>
                         </li>
@@ -166,12 +166,12 @@
                    <i>Findings of <b>EMNLP</b></i>, 2023
                 </div>
                 <div class="tags">
-                  <a href="https://arxiv.org/abs/2312.07066">arxiv</a> /
+                  <a href="https://arxiv.org/abs/2312.07066">arxiv</a>
                   <!--<a href="">code</a>-->
                   <!-- <a href="bib/">bibtex</a> -->
                 </div>
                 <div align="justify">
-                  <!-- TL;DR:  -->
+                  TL;DR:  We introduced a novel non-autoregressive approach to visual storytelling, <span class="small-caps">DiffuVST</span>, which is a diffusion-based LM featuring bidirectional context guidance and multimodal adapters. It directly predicts ground-truth text embeddings from any noisy input, achieving superior performance across NLG metrics at a massively faster inference speed compared to strong autoregressive baselines.
                 </div>
               </td>
             </tr>
@@ -192,11 +192,11 @@
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2311.08182">arxiv</a> /
-                  <!--<a href="">code</a> /-->
+                  <a href="https://github.com/OFA-Sys/DiverseEvol">code</a> 
                   <!-- <a href="bib/.bib">bibtex</a> -->
                 </div>
                 <div align="justify">
-                  <!-- TL;DR:  -->
+                  TL;DR: <span class="small-caps">DiverseEvol</span> is an efficient instruction-tuning method that allows the model itself to iteratively sample training subsets to improve its own performance, with a key selection principle of maintaining high diversity in the chosen subsets. Across three datasets and benchmarks, our models, trained on less than 4% of the original dataset, match or improve performance compared with finetuning on full data.
                 </div>
               </td>
             </tr>
@@ -213,21 +213,21 @@
                     <strong>Shengguang Wu</strong>, Zhenglun Chen, Qi Su
                 </div>
                 <div class="venue">
-                  <i>Under Review at <b>AAAI</b></i>, 2024
+                  <i>Under Review at <b>IJCAI</b></i>, 2024
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2312.08056">arxiv</a> /
-                  <!-- <a href="">code</a> -->
+                  <a href="https://github.com/danielwusg/artifact_diffusion">code</a>
                 </div>
                 <div align="justify">
-                  <!-- TL;DR:  -->
+                  TL;DR: We present an artifact recovery model that accurately generates images of lost artifacts adhering to historical knowledge. Key designs include: 1. prompt enhancement with archaeological knowledge elicited from LLMs; 2. contrastive learning for textual guidance on correlated historical expertise; 3. visual-semantic constraints on edge and perceptual features for learning intricate visual details.
                 </div>
               </td>
             </tr>
 
             <tr>
               <td width="30%">
-                <img src="images/qwen.jpeg" width=240px>
+                <img src="images/qwen.jpg" width=240px>
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -241,11 +241,11 @@
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2309.16609">arxiv</a> /
-                  <!--<a href="">code</a>-->
+                  <a href="https://github.com/QwenLM/Qwen">code</a>
                   <!-- <a href="bib/">bibtex</a> -->
                 </div>
                 <div align="justify">
-                  <!-- TL;DR:  -->
+                  TL;DR: We release <span class="small-caps">Qwen</span>, a family of highly-capabale foundation LLMs and Chat-Models. QwenLMs achieve superior performance than baselines (e.g., LLaMA2) of similar sizes on a wide range of benchmarks that measure natural language understanding, reasoning, problem solving, etc. Qwen-72B also outperforms GPT-3.5 on 70% of all tasks.
                 </div>
               </td>
             </tr>  
@@ -377,6 +377,6 @@
         </td>
       </tr>
     </table>
-  <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=QLmiHQflxIRMm2ULgewSTH1RI_kP-_LEhBP5p6IrxxE&cl=ffffff&w=300"></script> -->
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hia7jEgmSIlj13HiQ3nV_z3fbdB4PK41gwbICeSTxjo&cl=ffffff&w=a"></script>
   </body>
 <!-- <script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh-oh'},{'server':'p3plzcpnl472835'},{'id':'7914943'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script></html> -->
