--- a/index.html
+++ b/index.html
@@ -374,9 +374,17 @@
               Huge thanks for the website template from <a href="https://github.com/YueYANG1996/YueYANG1996.github.io">YueYANG1996.github.io</a>.
           </tr>
           </table>
+
+          <!-- Cluster Map -->
+          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+              <td><br>
+              <p align="left">
+              <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hia7jEgmSIlj13HiQ3nV_z3fbdB4PK41gwbICeSTxjo&cl=ffffff&w=150"></script>
+          </tr>
+          </table>
         </td>
       </tr>
     </table>
-  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hia7jEgmSIlj13HiQ3nV_z3fbdB4PK41gwbICeSTxjo&cl=ffffff&w=150"></script>
   </body>
 <!-- <script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh-oh'},{'server':'p3plzcpnl472835'},{'id':'7914943'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script></html> -->
