--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
             <tr>
               <td width="30%">
-                <img src="images/diffuvst.png" width=240px>
+                <img src="images/diffuvst.png" width=250px>
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -170,7 +170,7 @@
                   <!--<a href="">code</a>-->
                   <!-- <a href="bib/">bibtex</a> -->
                 </div>
-                <div align="justify">
+                <div align="justify" class="tldr-text">
                   TL;DR:  We introduced a novel non-autoregressive approach to visual storytelling, <span class="small-caps">DiffuVST</span>, which is a diffusion-based LM featuring bidirectional context guidance and multimodal adapters. It directly predicts ground-truth text embeddings from any noisy input, achieving superior performance across NLG metrics at a massively faster inference speed compared to strong autoregressive baselines.
                 </div>
               </td>
@@ -178,7 +178,7 @@
 
             <tr>
               <td width="30%">
-                <img src="images/diverseevol.png" width=240px>
+                <img src="images/diverseevol.png" width=250px>
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -195,7 +195,7 @@
                   <a href="https://github.com/OFA-Sys/DiverseEvol">code</a> 
                   <!-- <a href="bib/.bib">bibtex</a> -->
                 </div>
-                <div align="justify">
+                <div align="justify" class="tldr-text">
                   TL;DR: <span class="small-caps">DiverseEvol</span> is an efficient instruction-tuning method that allows the model itself to iteratively sample training subsets to improve its own performance, with a key selection principle of maintaining high diversity in the chosen subsets. Across three datasets and benchmarks, our models, trained on less than 4% of the original dataset, match or improve performance compared with finetuning on full data.
                 </div>
               </td>
@@ -203,7 +203,7 @@
 
             <tr>
               <td width="30%">
-                <img src="images/artifact.png" width=240px>
+                <img src="images/artifact.png" width=250px>
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -219,7 +219,7 @@
                   <a href="https://arxiv.org/abs/2312.08056">arxiv</a> /
                   <a href="https://github.com/danielwusg/artifact_diffusion">code</a>
                 </div>
-                <div align="justify">
+                <div align="justify" class="tldr-text">
                   TL;DR: We present an artifact recovery model that accurately generates images of lost artifacts adhering to historical knowledge. Key designs include: 1. prompt enhancement with archaeological knowledge elicited from LLMs; 2. contrastive learning for textual guidance on correlated historical expertise; 3. visual-semantic constraints on edge and perceptual features for learning intricate visual details.
                 </div>
               </td>
@@ -227,7 +227,7 @@
 
             <tr>
               <td width="30%">
-                <img src="images/qwen.jpg" width=240px>
+                <img src="images/qwen.jpg" width=250px>
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -244,7 +244,7 @@
                   <a href="https://github.com/QwenLM/Qwen">code</a>
                   <!-- <a href="bib/">bibtex</a> -->
                 </div>
-                <div align="justify">
+                <div align="justify" class="tldr-text">
                   TL;DR: We release <span class="small-caps">Qwen</span>, a family of highly-capabale foundation LLMs and Chat-Models. QwenLMs achieve superior performance than baselines (e.g., LLaMA2) of similar sizes on a wide range of benchmarks that measure natural language understanding, reasoning, problem solving, etc. Qwen-72B also outperforms GPT-3.5 on 70% of all tasks.
                 </div>
               </td>
