--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
                     <strong>Shengguang Wu</strong>, Keming Lu, Benfeng Xu, Junyang Lin, Qi Su, Chang Zhou
                 </div>
                 <div class="venue">
-                   <i>Under Review at <b>NAACL</b></i>, 2024
+                   <i>Under Review, 2024
+                   <!-- <i>Under Review at <b>NAACL</b></i>, 2024 -->
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2311.08182">arxiv</a> /
@@ -220,7 +221,8 @@
                     <strong>Shengguang Wu</strong>, Zhenglun Chen, Qi Su
                 </div>
                 <div class="venue">
-                  <i>Under Review at <b>ECCV</b></i>, 2024
+                  <i>Under Review, 2024
+                  <!-- <i>Under Review at <b>ECCV</b></i>, 2024 -->
                 </div>
                 <div class="tags">
                   <a href="https://arxiv.org/abs/2312.08056">arxiv</a> /
