--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <strong>Shengguang Wu</strong>, Keming Lu, Benfeng Xu, Junyang Lin, Qi Su, Chang Zhou
                 </div>
                 <div class="venue">
-                   <i>Under Review, 2024
+                   <i>Under Review, 2024</i>
                    <!-- <i>Under Review at <b>NAACL</b></i>, 2024 -->
                 </div>
                 <div class="tags">
@@ -221,7 +221,7 @@
                     <strong>Shengguang Wu</strong>, Zhenglun Chen, Qi Su
                 </div>
                 <div class="venue">
-                  <i>Under Review, 2024
+                  <i>Under Review, 2024</i>
                   <!-- <i>Under Review at <b>ECCV</b></i>, 2024 -->
                 </div>
                 <div class="tags">
