--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <td width="100%" valign="middle">
               <heading>About me</heading>
               <br>
-                <p class="light">Hi! My name is Shengguang Wu. I also go by Daniel. I am a third-year Master's student at <a href="https://english.pku.edu.cn/">Peking University</a>, where I am grateful to be advised by <a href="https://scholar.google.com.hk/citations?user=9f4JUrUAAAAJ&hl=en">Prof. Qi Su</a>. Currently, I am also a research intern in <a href="https://qwenlm.github.io/">Qwen Team, Alibaba Group</a>, where we develop state-of-the-art foundation LLMs such as <a href="https://github.com/QwenLM/Qwen/">QwenLM</a>.
+                <p class="light">Hi! My name is Shengguang (I also go by Daniel). I am a third-year Master's student at <a href="https://english.pku.edu.cn/">Peking University</a>, where I am grateful to be advised by <a href="https://scholar.google.com.hk/citations?user=9f4JUrUAAAAJ&hl=en">Prof. Qi Su</a>. Currently, I am also a research intern in <a href="https://qwenlm.github.io/">Qwen Team, Alibaba Group</a>, where we develop state-of-the-art foundation LLMs such as <a href="https://github.com/QwenLM/Qwen/">QwenLM</a>.
                 </p>
             </td>
           </tr>
