--- a/index.html
+++ b/index.html
@@ -403,13 +403,14 @@
 
           <!-- Acknowledgements -->
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-          <tr>
+            <tr>
               <td><br>
-              <p align="right">
-              <font size="2">
-              Huge thanks for the website template from <a href="https://github.com/YueYANG1996/YueYANG1996.github.io">YueYANG1996.github.io</a>.
-          </tr>
-          </table>
+                <p align="right" style="font-size: small;">
+                  Website template from <a href="https://github.com/YueYANG1996/YueYANG1996.github.io" style="font-size: small;">YueYANG1996.github.io</a>.
+                </p>
+              </td>
+            </tr>
+          </table> 
         </td>
       </tr>
     </table>
