--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Shengguang Wu</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
-    <link rel="icon" href="images/icons/stonehenge.svg">
+    <link rel="icon" href="images/stf-logo3-square.png">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111341597-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -62,14 +62,17 @@
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="55%" valign="bottom">
-              <name>Shengguang (Daniel) Wu</name><br>
-              Email: wushengguang [AT] stu.pku.edu.cn<br><br>
+              <name>Shengguang Wu</name><br>
+              Ph.D. Student, Computer Science, Stanford University<br>
+              Email: shgwu [AT] cs.stanford [DOT] edu<br><br>
               <a href="https://scholar.google.com/citations?user=QZmepnEAAAAJ&hl=en">
                 <img src="images/icons/google-scholar.svg" alt="Google Scholar Icon">
               </a>
+              <!-- <a href="https://github.com/danielwusg"> -->
               <a href="">
                 <img src="images/icons/github.svg" alt="GitHub Icon">
               </a>
+              <!-- <a href="https://www.linkedin.com/in/shengguang-wu-41334627b"> -->
               <a href="">
                 <img src="images/icons/linkedin.svg" alt="LinkedIn Icon">
               </a>
@@ -90,7 +93,17 @@
             <td width="100%" valign="middle">
               <heading>About me</heading>
               <br>
-                <p class="light">Hi! My name is Shengguang (I also go by Daniel). I am a third-year Master's student at <a href="https://english.pku.edu.cn/">Peking University</a>, where I am grateful to be advised by <a href="https://scholar.google.com.hk/citations?user=9f4JUrUAAAAJ&hl=en">Prof. Qi Su</a>. Currently, I am also a research intern in <a href="https://qwenlm.github.io/">Qwen Team, Alibaba Group</a>, where we develop state-of-the-art foundation LLMs such as <a href="https://github.com/QwenLM/Qwen/">QwenLM</a>.
+                <p class="light">
+                  Hi! My name is Shengguang (I also go by Daniel). I'm a first-year PhD student in Computer Science at Stanford University.
+                  I'm currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a> at <a href="https://www.autonomousagents.stanford.edu/">Stanford Autonomous Agents Lab</a>.
+                  <!-- , affliated with <a href="https://nlp.stanford.edu/">Stanford NLP</a> and <a href="https://www.autonomousagents.stanford.edu/">Autonomous Agents Lab</a>. I'm currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a>.  -->
+                  <br>
+                  I obtained my Master's degree from Peking University, advised by <a href="https://scholar.google.com.hk/citations?hl=en&user=9f4JUrUAAAAJ/">Qi Su</a>. 
+                  Previously, I've also worked as a research intern with <a href="https://qwenlm.github.io/">Qwen Team</a> and at <a href="https://www.bytedance.com/en/">ByteDance AI-Lab</a>.
+                  <!-- <br>   -->
+                  <!-- I received my Master's degree from Peking University, advised by <a href="https://scholar.google.com.hk/citations?hl=en&user=9f4JUrUAAAAJ/">Qi Su</a>.  -->
+                  <!-- <br>   -->
+                  <!-- Previously, I was a research intern at <a href="https://www.bytedance.com/en/">ByteDance AI-Lab NLP</a> and in <a href="https://qwenlm.github.io/">Qwen Team, Alibaba</a>. -->
                 </p>
             </td>
           </tr>
@@ -102,52 +115,31 @@
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tr>
               <td width="100%" valign="middle">
-                <heading>Research Interests</heading><br>
-                  <p>
-                    I am broadly interested in the intersection area of <strong>Natural Language Processing (NLP)</strong>, <strong>Computer Vision</strong>, and <strong>Linguistics</strong>. 
-                    My current research focuses on developing human-like capabilities onto (Vision-)Lanaguage-Models. These include:
-                  </p>
-                  <div class="container">
-                    <img src="images/icons/learn3.svg">
-                    <div class="text">
-                        <span><strong>Continual Lifelong Learning:</strong> <br> 
-                          &nbsp;&nbsp;&nbsp;&nbsp; 
-                          Enabling AI agents to continually self-improve - to actively adapt to new information (data) and novel task objectives, as efficiently as an exceptional human learner.
-                    </div>
+                <heading>Research Interests</heading>
+                <p>
+                  I am interested in developing human-like learning and reasoning skills in machines across language and visual domains. 
+                  Currently, my work involves the following areas:
+                </p>
+                <div class="container">
+                  <img src="images/icons/learn3.svg" alt="Self Improvement Icon">
+                  <div class="text">
+                    <strong>Self-Improvement:</strong><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp; Enabling AI agents to learn from interactions and <strong>continually self-improve</strong> — actively adapting to new information and novel tasks.
                   </div>
-                  <br>
-                  <div class="container">
-                    <img src="images/icons/writing2.svg">
-                    <div class="text">
-                        <span><strong>Controllable & Creative Generation:</strong> <br> 
-                          &nbsp;&nbsp;&nbsp;&nbsp;
-                          Allowing diverse semantic controls in generative systems, while maintaining coherency and creativity in long-form discourse such as <strong>narratives</strong>.
-                    </div>
+                </div>
+                <br>
+                <div class="container">
+                  <img src="images/icons/vision.svg" alt="Multimodal Grounding Icon">
+                  <div class="text">
+                    <strong>Multimodal Grounding & Reasoning:</strong><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp; Harnessing textual feedback to guide fine-grainded visual perception, and drawing from visual insights to optimize language-based reasoning.
                   </div>
-                  <br>
-                  <div class="container">
-                    <img src="images/icons/conversation2.svg">
-                    <div class="text">
-                        <span><strong>Conversational Pragmatics:</strong> <br> 
-                          &nbsp;&nbsp;&nbsp;&nbsp;
-                          Imparting LMs with such conversational aptitude, that they interpret subtle intents and pragmatic messages (<i>e.g.</i>, implicatures) beyond literal semantics - akin to human interlocutors.
-                    </div>
-                  </div>
-                  <br>
-                  <div class="container">
-                    <img src="images/icons/vision.svg">
-                    <div class="text">
-                        <span><strong>Multimodal Grounding & Reasoning:</strong> <br>
-                          &nbsp;&nbsp;&nbsp;&nbsp;
-                          Building VLMs upon the <strong>reciprocal enhancement of language and vision</strong> - drawing from visual feedback to optimize language-based reasoning and harnessing textual insights to guide visual grounding.
-                    </div>
-                  </div>
+                </div>
+                <br>
               </td>
             </tr>
           </table>
-          
-          <br>
-          
+
           <!-- Publications & Manuscripts -->
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" id="shortList">
             <tr>
@@ -161,26 +153,26 @@
                 </div>
               </td>
             </tr>
-            <!-- <tr> -->
-              <!-- <td width="30%">
+            <tr>
+              <td width="30%">
                 <img src="images/prag2.png" width=250px>
-              </td> -->
-              <!-- <td width="70%" valign="middle">
+              </td>
+              <td width="70%" valign="middle">
                 <div class="title">
                   <!-- <a href=""><b>Rethinking Pragmatics in Large Language Models: Towards Open-Ended Evaluation and Preference Tuning</b></a> -->
-                  <!-- <b>Rethinking Pragmatics in Large Language Models: Towards Open-Ended Evaluation and Preference Tuning</b>
+                  <b>Rethinking Pragmatics in Large Language Models: Towards Open-Ended Evaluation and Preference Tuning</b>
                 </div>
                 <div class="authors">
                     <strong>Shengguang Wu</strong>, Shusheng Yang, Zhenglun Chen, Qi Su
                 </div>
                 <div class="venue">
-                  <i><b>ArXiv</b></i>, 2024
+                  <i><b>EMNLP-Main</b></i>, 2024
                 </div>
                 <div align="justify" class="tldr-text">
-                  TL;DR: We proposed novel paradigms for assessing and enhancing social-pragmatic abilities in L(V)LMs. Key results include: 1. open-ended evaluation better reveals LLMs' pragmatic generation as opposed to multiple-choice setup; 2. preferential tuning effectively invokes pragmatic understanding without compromising generic abilities; 3. improvement of multimodal theory of mind in image referential games.
+                  TL;DR: We proposed novel paradigms for assessing and enhancing social-pragmatic abilities in L(V)LMs. Key results include: 1. open-ended evaluation better reveals LLMs' pragmatic generation as opposed to multiple-choice setup; 2. preferential tuning effectively invokes pragmatic reasoning without compromising generic abilities; 3. improvement of the speaker model's multimodal theory of mind in image referential games.
                 </div>
-              </td> --> 
-            <!-- </tr> -->
+              </td>
+            </tr>
             <tr>
               <td width="30%">
                 <img src="images/diverseevol.png" width=250px>
@@ -269,7 +261,7 @@
                     <strong>Shengguang Wu</strong>, Mei Yuan, Qi Su
                 </div>
                 <div class="venue">
-                   <i>Findings of <b>EMNLP</b></i>, 2023
+                   <i><b>EMNLP-Findings</b></i>, 2023
                 </div>
                 <!-- <div class="tags"> -->
                   <!-- <a href="https://arxiv.org/abs/2312.07066">arxiv</a> -->
@@ -293,12 +285,23 @@
               <table>
                 <tr>
                   <td width="85%">
-                    <b>Peking University</b> (2021 - present) <br>
+                    <b>Stanford University</b> (2024 - present) <br>
+                    <li> PhD in Computer Science </li>
+                    <!-- <li> Student Researcher at <a href="https://www.ai.pku.edu.cn/">Institute for Artificial Intelligence</a> </li> -->
+                    <!-- <br><br><br><br> -->
+                  </td>
+                  <td width="15%">
+                    <img src="images/stf-logo.png" width=70px style="display: block; margin-left: auto; margin-right: auto;">
+                  </td>
+                </tr>
+                <tr>
+                  <td width="85%">
+                    <b>Peking University</b> (2021 - 2024) <br>
                     <li> Master in Computational Linguistics </li>
                     <li> Student Researcher at <a href="https://www.ai.pku.edu.cn/">Institute for Artificial Intelligence</a> </li>
                   </td>
                   <td width="15%">
-                    <img src="images/pku-logo.svg" width=100px style="display: block; margin-left: auto; margin-right: auto;">
+                    <img src="images/pku-logo.svg" width=92px style="display: block; margin-left: auto; margin-right: auto;">
                   </td>
                 </tr>
                 <tr>
@@ -316,7 +319,7 @@
                     <li> Bachelor in Germanic Linguistics </li>
                   </td>
                   <td width="15%">
-                    <img src="images/nju-logo.svg" width=80px style="display: block; margin-left: auto; margin-right: auto;">
+                    <img src="images/nju-logo.svg" width=75px style="display: block; margin-left: auto; margin-right: auto;">
                   </td>
                 </tr>
               </table>
@@ -330,11 +333,11 @@
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="100%" valign="middle">
-              <heading>Industry Research Experiences</heading><br><br>
+              <heading>Industry Experiences</heading><br><br>
               <table>
                 <tr>
                   <td width="85%">
-                    <a href="https://damo.alibaba.com/"><b>DAMO Academy, Alibaba Group</b></a>, Beijing, China (Mar. 2023 - present) <br>
+                    <a href="https://qwenlm.github.io/"><b>Qwen Team, Alibaba Group</b></a>, Beijing, China (Mar. 2023 - Feb. 2024) <br>
                     <li> Research Intern: Foundation LLMs and Human-Alignment (SFT, DPO, RAG) </li>
                     <!-- <li> Principal Investigators: <a href="https://scholar.google.com/citations?user=qp6IwtgAAAAJ&hl=en">Junyang Lin</a>, <a href="https://scholar.google.com/citations?user=QeSoG3sAAAAJ&hl=en">Dr. Chang Zhou</a> </li> -->
                   </td>
@@ -410,7 +413,7 @@
                 </p>
               </td>
             </tr>
-          </table> 
+          </table>          
         </td>
       </tr>
     </table>
