--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <td width="55%" valign="bottom">
               <name>Shengguang Wu</name><br>
               Ph.D. Student, Computer Science, Stanford University<br>
-              Email: shgwu [AT] cs.stanford [DOT] edu<br><br>
+              Email: shgwu [AT] cs [DOT] stanford [DOT] edu<br><br>
               <a href="https://scholar.google.com/citations?user=QZmepnEAAAAJ&hl=en">
                 <img src="images/icons/google-scholar.svg" alt="Google Scholar Icon">
               </a>
