--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   I'm currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a> at <a href="https://www.autonomousagents.stanford.edu/">Stanford Autonomous Agents Lab</a>.
                   <!-- , affliated with <a href="https://nlp.stanford.edu/">Stanford NLP</a> and <a href="https://www.autonomousagents.stanford.edu/">Autonomous Agents Lab</a>. I'm currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a>.  -->
                   <br>
-                  I received my Master's degree from Peking University, advised by <a href="https://scholar.google.com.hk/citations?hl=en&user=9f4JUrUAAAAJ/">Qi Su</a>. 
+                  I received my Master's degree from Peking University, advised by <a href="https://scholar.google.com.hk/citations?user=9f4JUrUAAAAJ&hl=en">Qi Su</a>. 
                   Previously, I've also worked as a research intern with <a href="https://qwenlm.github.io/">Qwen Team</a> and at <a href="https://www.bytedance.com/en/">ByteDance AI-Lab</a>.
                   <!-- <br>   -->
                   <!-- I received my Master's degree from Peking University, advised by <a href="https://scholar.google.com.hk/citations?hl=en&user=9f4JUrUAAAAJ/">Qi Su</a>.  -->
