--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 </tr>
                 <tr>
                   <td width="85%">
-                    <a href="https://www.bytedance.com/en/"><b>ByteDance AI Lab</b></a>, Beijing, China (Jul. 2022 - Feb. 2023) <br>
+                    <a href="https://www.bytedance.com/en/"><b>ByteDance AI Lab - NLP & Research</b></a>, Beijing, China (Jul. 2022 - Feb. 2023) <br>
                     <li> Research & Engineering Intern: NLI and Data-Centric Learning (automatic detection of harmful messages & fake news) </li>
                     <!-- <li> Principal Investigators: <a href="https://zhangyuc.github.io/">Yuchen Zhang</a>, <a href="https://scholar.google.com/citations?user=nTl5mSwAAAAJ&hl=en">Hang Li</a> </li> -->
                   </td>
