--- a/index.html
+++ b/index.html
@@ -417,6 +417,9 @@
         </td>
       </tr>
     </table>
-  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hia7jEgmSIlj13HiQ3nV_z3fbdB4PK41gwbICeSTxjo&cl=ffffff&w=100"></script>
+  <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hia7jEgmSIlj13HiQ3nV_z3fbdB4PK41gwbICeSTxjo&cl=ffffff&w=100"></script> -->
+  <div style="display:none;">
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hia7jEgmSIlj13HiQ3nV_z3fbdB4PK41gwbICeSTxjo&cl=ffffff&w=100"></script>
+  </div>
   </body>
 <!-- <script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'}),_trfd.push({'ap':'cpsh-oh'},{'server':'p3plzcpnl472835'},{'id':'7914943'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js'></script></html> -->
