--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           <br>
           
           <!-- Education -->
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="100%" valign="middle">
               <heading>Education</heading>
@@ -285,10 +285,10 @@
                 <tr>
                   <td width="85%">
                     <b>Stanford University</b> (2024 - present) <br>
-                    <li> PhD in Computer Science </li>
+                    <li> PhD in Computer Science </li> -->
                     <!-- <li> Student Researcher at <a href="https://www.ai.pku.edu.cn/">Institute for Artificial Intelligence</a> </li> -->
                     <!-- <br><br><br><br> -->
-                  </td>
+                  <!-- </td>
                   <td width="15%">
                     <img src="images/stf-logo.png" width=70px style="display: block; margin-left: auto; margin-right: auto;">
                   </td>
@@ -324,12 +324,12 @@
               </table>
             </td>
           </tr>
-          </table>
+          </table> -->
 
           <!-- <br> -->
 
           <!-- Experience -->
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <!-- <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
           <tr>
             <td width="100%" valign="middle">
               <heading>Industry Experiences</heading><br><br>
@@ -337,9 +337,9 @@
                 <tr>
                   <td width="85%">
                     <a href="https://qwenlm.github.io/"><b>Qwen Team, Alibaba Group</b></a>, Beijing, China (Mar. 2023 - Feb. 2024) <br>
-                    <li> Research Intern: Foundation LLMs and Human-Alignment (SFT, DPO, RAG) </li>
+                    <li> Research Intern: Foundation LLMs and Human-Alignment (SFT, DPO, RAG) </li> -->
                     <!-- <li> Principal Investigators: <a href="https://scholar.google.com/citations?user=qp6IwtgAAAAJ&hl=en">Junyang Lin</a>, <a href="https://scholar.google.com/citations?user=QeSoG3sAAAAJ&hl=en">Dr. Chang Zhou</a> </li> -->
-                  </td>
+                  <!-- </td>
                   <td width="15%">
                     <img src="images/alibaba-logo.svg" width=180px style="display: block; margin-left: auto; margin-right: auto;">
                   </td>
@@ -347,9 +347,9 @@
                 <tr>
                   <td width="85%">
                     <a href="https://www.bytedance.com/en/"><b>ByteDance AI Lab - NLP & Research</b></a>, Beijing, China (Jul. 2022 - Feb. 2023) <br>
-                    <li> Research & Engineering Intern: NLI and Data-Centric Learning (automatic detection of harmful messages & fake news) </li>
+                    <li> Research & Engineering Intern: NLI and Data-Centric Learning (automatic detection of harmful messages & fake news) </li> -->
                     <!-- <li> Principal Investigators: <a href="https://zhangyuc.github.io/">Yuchen Zhang</a>, <a href="https://scholar.google.com/citations?user=nTl5mSwAAAAJ&hl=en">Hang Li</a> </li> -->
-                  </td>
+                  <!-- </td>
                   <td width="15%">
                     <img src="images/bytedance-logo.svg" width=180px style="display: block; margin-left: auto; margin-right: auto;">
                   </td>
@@ -357,7 +357,7 @@
               </table>
             </td>
           </tr>
-          </table>
+          </table> -->
 
           <!-- Teaching -->
           <!-- 
