--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <!-- <a href=""><b>Rethinking Pragmatics in Large Language Models: Towards Open-Ended Evaluation and Preference Tuning</b></a> -->
-                  <b>Rethinking Pragmatics in Large Language Models: Towards Open-Ended Evaluation and Preference Tuning</b>
+                  <a href="https://aclanthology.org/2024.emnlp-main.1258.pdf"><b>Rethinking Pragmatics in Large Language Models: Towards Open-Ended Evaluation and Preference Tuning</b></a>
+                  <!-- <b>Rethinking Pragmatics in Large Language Models: Towards Open-Ended Evaluation and Preference Tuning</b> -->
                 </div>
                 <div class="authors">
                     <strong>Shengguang Wu</strong>, Shusheng Yang, Zhenglun Chen, Qi Su
