--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
               <heading>About me</heading>
               <br>
                 <p class="light">
-                  Hi! My name is Shengguang (I also go by Daniel). I'm a first-year PhD student in Computer Science at Stanford University, currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a> at <a href="https://www.autonomousagents.stanford.edu/">Stanford Autonomous Agents Lab</a>.
+                  Hi! My name is Shengguang (I also go by Daniel). I'm a first-year PhD student in Computer Science at Stanford University, currently rotating with <a href="https://cs.stanford.edu/~diyiy/">Diyi Yang</a> at <a href="https://saltlab.stanford.edu/">Stanford Social and Language Technologies (SALT) Lab</a>.
+                  <!-- Hi! My name is Shengguang (I also go by Daniel). I'm a first-year PhD student in Computer Science at Stanford University, currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a> at <a href="https://www.autonomousagents.stanford.edu/">Stanford Autonomous Agents Lab</a>. -->
                   <!-- , affliated with <a href="https://nlp.stanford.edu/">Stanford NLP</a> and <a href="https://www.autonomousagents.stanford.edu/">Autonomous Agents Lab</a>. I'm currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a>.  -->
                   <br>
                   I received my Master's degree from Peking University, advised by <a href="https://scholar.google.com.hk/citations?user=9f4JUrUAAAAJ&hl=en">Qi Su</a>. 
@@ -117,7 +118,7 @@
               <td width="100%" valign="middle">
                 <heading>Research Interests</heading>
                 <p>
-                  I am interested in developing human-like learning and reasoning skills in machines across language and visual domains. 
+                  I am interested in developing human-like learning and reasoning skills in machines across domains and modalities. 
                   Currently, my work involves the following areas:
                 </p>
                 <div class="container">
