--- a/index.html
+++ b/index.html
@@ -157,6 +157,46 @@
             </tr>
             <tr>
               <td width="30%">
+                <video width="220" autoplay muted>
+                  <source src="images/3dgen.mp4" type="video/mp4">
+                </video>                
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="https://ai.stanford.edu/~sunfanyun/3d-generalist/"><b>3D-Generalist: Self-Improving Vision-Language-Action Models for Crafting 3D Worlds</b></a>
+                </div>
+                <div class="authors">
+                  Fan-Yun Sun, <strong>Shengguang Wu</strong>, Christian Jacobsen, Thomas Yim, Haoming Zou, Alex Zook, Shangru Li, Ethem Can, Xunlei Wu, Clemens Eppner, Valts Blukis, Jonathan Tremblay, Jiajun Wu, Stan Birchfield, Nick Haber
+                </div>
+                <div class="venue">
+                  <i><b>ArXiv</b></i>, 2025
+                </div>
+                <div align="justify" class="tldr-text">
+                  TL;DR: 3D-Generalist is a generative graphics framework to create 3D environments. Key modules include: 1. diffusion model to generate panoramic images that render the structures of 3D environments; 2. VLA trained via self-improving loop for code generation that refines the environments; 3. another VLA for placing diverse unlabled 3D assets. 3D-Generalist provides a controllabe pipeline to scale up synthetic 3D environment data for embodied AI.
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td width="30%">
+                <img src="images/svco.png" width=250px>
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="https://arxiv.org/pdf/2502.13928"><b>Symmetrical Visual Contrastive Optimization: Aligning Vision-Language Models with Minimal Contrastive Images</b></a>
+                </div>
+                <div class="authors">
+                    <strong>Shengguang Wu</strong>, Fan-Yun Sun, Kaiyue Wen, Nick Haber
+                </div>
+                <div class="venue">
+                  <i><b>ArXiv</b></i>, 2025
+                </div>
+                <div align="justify" class="tldr-text">
+                  TL;DR: S-VCO is a novel finetuning method that enhances visual-centric capabilties of VLMs while preserving general performance. Key design is a symmetrical visual contrastive objective that optimizes over visual details while avoiding one-sided "preference" formulation. Across various VLM benchmark domains, S-VCO demonstrates most significant and consistent improvements, with especially strong gains on visually demanding tasks.
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td width="30%">
                 <img src="images/prag2.png" width=250px>
               </td>
               <td width="70%" valign="middle">
